<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_swap_vert_black_24dp"
        android:title="@string/data_refresh"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_network_available"
        android:icon="@drawable/connected"
        android:title="@string/network_avalable"
        android:visible="false"
        app:showAsAction="always" />


    <item
        android:id="@+id/menu_network_absent"
        android:icon="@drawable/disconnected"
        android:title="@string/network_absent"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>