<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    >

    <TextView
        android:id="@+id/currency_symbol"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/currency_logo"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/currency_value"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/currency_code"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/currency_symbol"
        android:textColor="@android:color/black"
        android:textSize="26sp" />



</LinearLayout>
