<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".conversion.ConversionActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/radio_linear_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/linear_box_borders"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radio_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <RadioButton
                        android:id="@+id/radio_eth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/conversion_radio_eth_btn" />

                    <RadioButton
                        android:id="@+id/radio_btc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/conversion_radio_btc_btn" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/linear_box_borders"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/conversion_currency_logo"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/circular_currency_background"
                        android:gravity="center"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/conversion_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/default_conversion_result_value"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="26sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/linear_box_borders"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="12dp">

                    <Spinner
                        android:id="@+id/conversion_spinner"
                        style="@style/spinner_style"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textAlignment="center">

                    </Spinner>

                    <EditText
                        android:id="@+id/value_to_convert_box"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/edit_text"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textAlignment="center"
                        android:autofillHints="" tools:targetApi="o"/>

                </LinearLayout>

                <Button
                    android:id="@+id/convertBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/linear_box_borders"
                    android:onClick="onConvertBtnClick"
                    android:text="@string/convert_btn_text"
                    android:textAlignment="center" />


            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</ScrollView>